--- a/app.css
+++ b/app.css
@@ -6,6 +6,28 @@
     text-decoration: none;
     list-style: none;
 }
+/* scroll bar styling */
+/* width */
+::-webkit-scrollbar {
+    width: 4px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: black; 
+    
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
 body{
     background-color: rgb(65, 67, 69);
 }
@@ -22,17 +44,17 @@ nav{
 }
 .main-heading a{
     color: #fff;
-}
-.cart{
-    cursor: pointer;
+    font-size: 1.3rem;
+    font-weight: bold;
 }
 .cart i{
     font-size: 1.5rem;
+    cursor: pointer;
 }
 .dropDown{
     display: none;
-    color: red;
-    border: 1px solid red;
+    background-color: #fff;
+    color: black;
     border-radius: .5rem;
     padding: 1rem;
     margin-top: 1rem;
@@ -49,6 +71,15 @@ nav{
 .displayBlock{
     display: block;
 }
+.viewCart{
+    display: block;
+    text-align: center;
+    padding: 1rem 0px;
+}
+.viewCart a{
+    color: black;
+    font-weight: 500;
+}
 .cartlist-items img{
     width: 30px;
 }
@@ -58,10 +89,17 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: default;
 }
 .cart-img,.cart-img img{
     width: 30px;
     height: 30px;
+}
+#deleteCartData{
+    cursor: pointer;
+}
+#deleteCartData:hover{
+    color: red;
 }
 .searchBox{
     display: flex;
@@ -80,19 +118,21 @@ nav{
 main{
     display: flex;
     flex-wrap: wrap;
+    flex: 1;
     align-items: center;
-    margin: 1rem .3rem;
     gap: .4rem;
-    padding: 1.8rem 1rem;
+    padding: 1.8rem .6rem;
 }
 .cardContainer{
-    border:1px solid black;
-    width: 300px;
+    box-shadow:0px 0px 5px 1px rgba(0, 0, 0, 0.50) ;
+    width: 220px;
+    border-radius: 8px;
 }
 .image{
- height: 300px;
+ height: 200px;
 }
 .image img{
+    border-radius: 8px  8px 0px 0px;
     width: 100%;
     height: 100%;
 }
@@ -111,5 +151,6 @@ main{
     background-color: black;
     color: #fff;
     padding: .5rem 1.2rem;
+    border-radius: 8px;
     cursor: pointer;
 }
