--- a/app.css
+++ b/app.css
@@ -117,8 +117,8 @@ nav{
 }
 main{
     display: flex;
+    justify-content:space-evenly;
     flex-wrap: wrap;
-    flex: 1;
     align-items: center;
     gap: .4rem;
     padding: 1.8rem .6rem;
@@ -127,6 +127,11 @@ main{
     box-shadow:0px 0px 5px 1px rgba(0, 0, 0, 0.50) ;
     width: 220px;
     border-radius: 8px;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+}
+.cardContainer:hover{
+    transform: scale(1.04);
 }
 .image{
  height: 200px;
